typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement4.ts.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement4.ts:2:10
  |
2 | for (var a = 1 of X) {
  |          ^

error: UndefinedSymbol {
    sym: Atom('X' type=inline),
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement4.ts:2:19
  |
2 | for (var a = 1 of X) {
  |                   ^

